Test z-index fix on nav for iphone

--- a/style.scss
+++ b/style.scss
@@ -277,7 +277,7 @@ iframe{ width: 100%; }
   background: $ddblue;
   width: 100%;
   position: relative;
-  z-index: 999;
+  z-index: 999999999;
   height: 60px;
 
   .nav-menu{
